# logfind

./: .gitignore  .logfind  README.md  TODO.md  logfind.cabal
lib/: LogFind.hs
src/: LogFind.hs  Main.hs
test/: LogFindSpec.hs  doctest.hs
